<resources>
    <string name="app_name">Unscrambler</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="browse">Browse</string>
    <string name="no_matching_files">No dictionary files.</string>
    <string name="menu_delete">Delete</string>
    <string name="singularcab">wybrany/a</string>
    <string name="pluralcab">wybrane/wybranych</string>
    <string name="progress_dialog">Searching</string>
    <string name="please_wait">Please wait...</string>
    <string name="ok">Ok</string>
    <string name="back">Back</string>
    <string name="importing">Importing</string>
    <string name="importString">Import</string>
    <string name="menu_selectAll">Select all</string>
    <string name="no_files_to_import">No matching files found</string>
    <string name="menu_browseDicts">Import dictionary</string>
    <string name="no_dictionaries">No dictionary files.</string>
    <string name="delete">Delete</string>
    <string name="set">Set</string>
    <string name="title_activity_dictionary">Customize Dictionary</string>
    <string name="current_dictionary">Current Dictionary</string>
    <string name="current_dictionary_colon">Current dictionary:</string>
    <string name="dictionaries_colon">Dictionaries:</string>
    <string name="choose">Choose</string>
    <string name="no_sorting">No sorting</string>
    <string name="fromAtoZsorting">Alphabetical</string>
    <string name="fromZtoAsorting">Reverse alphabetical</string>
    <string name="wordsAscCount">Word Count Ascending</string>
    <string name="wordsDescCount">Word Count Descending</string>
    <string name="sorting">Sorting</string>
    <string name="unscrambler">Word Unscrambler</string>
    <string name="dictionaries">Dictionaries</string>
    <string name="save">Save</string>
    <string name="dictionaryNameHinit">Name</string>
    <string name="dictionaryContentHint">Words separated by whitespaces</string>
    <string name="are_you_sure_to_delete">Are you sure to delete this dictionary?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="file_already_exsists">Dictionary with that name already exsists</string>
    <string name="menu_createDictionary">Create dictionary</string>
    <string name="empty_name">You didn\'t specify name</string>
    <string name="dot_name">Name can\'t start with a dot</string>
    <string name="empty_content">\'Content\' must not be empty</string>
    <string name="name_starts_with_wrong_name">Name can\'t start with that name</string>
    <string name="name_contains_disallowed_char">Name contains disallowed characters</string>
    <string name="name_too_long">Name is too long</string>
    <string name="delete_all">Remove all dictionaries</string>
    <string name="are_you_sure_to_delete_all">Are you sure to delete ALL dictionaries?</string>
    <string name="unscrambleWordHint">Enter a scrambled word</string>
    <string name="scrambledWordHint">Enter scrambled word here</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="unscramble">Unscramble</string>
    <string name="startsWithLabel">Starts with</string>
    <string name="endsWithLabel">Ends with</string>
    <string name="containsLabel">Contains</string>
    <string name="lengthLabel">Length</string>
    <string name="orderLabel">Order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="enter_scrambled_word">Enter scrambled word</string>
    <string name="starts_with_longer_than_scrambledWord">\'Starts with\' cannot be longer than scrambled word</string>
    <string name="starts_with_contains_chars_which_not_in_scrambledWord">\'Starts with\' must contain characters from the scrambled word</string>
    <string name="ends_with_longer_than_scrambledWord">\'Ends with\' cannot be longer than scrambled word</string>
    <string name="ends_with_contains_chars_which_not_in_scrambledWord">\'Ends with\' must contain characters from the scrambled word</string>
    <string name="contains_longer_than_scrambledWord">\'Contains\' cannot be longer than scrambled word</string>
    <string name="contains_contains_chars_which_not_in_scrambledWord">\'Contains\' must contain characters from the scrambled word</string>
    <string name="length_cannot_be_zero">Length cannot be equal to zero</string>
    <string name="length_bigger_than_scrambledWord_length">Length cannot be bigger than scrambled word size</string>
    <string name="unscrambling_word">Unscrambling...</string>
    <string name="no_dictionary_mounted">You don\'t have any proper dictionary mounted</string>
    <string name="no_words_found">No words have been found</string>
    <string name="no_words_found_for">No words found for</string>
    <string name="scrambled_word_longer_than_limit">Scrambled word cannot be longer than 15 characters</string>
    <string name="found_colon">Found:</string>
    <string name="unscramblingHint">Unscramble up to 15 letter words</string>
    <string name="in">in</string>
    <string name="menu_downloadDictionaries">Download dictionaries</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="processing">Processing</string>
</resources>
