<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hmkcode="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_createDictionary"
        android:title="@string/menu_createDictionary"
        android:titleCondensed="@string/menu_createDictionary"
        hmkcode:showAsAction="never"/>

    <item
        android:id="@+id/menu_browseDicts"
        android:title="@string/menu_browseDicts"
        android:titleCondensed="@string/menu_browseDicts"
        hmkcode:showAsAction="never"/>

    <item
        android:id="@+id/menu_downloadDictionaries"
        android:title="@string/menu_downloadDictionaries"
        android:titleCondensed="@string/menu_downloadDictionaries"
        hmkcode:showAsAction="never"/>

</menu>